Fixed issue with background image not showing on chrome + Setup gh pages

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,9 @@ code {
     z-index: -10;
     width: 100%;
     height: 200%;
-    background-image: url('./assets/blob-bg.svg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url('./assets/blob_bg.png');
     background-color: white;
     animation: backgroundAnimation 8s;
     animation-iteration-count: infinite;
